# MyBudget

./: .gitignore  CMakeLists.txt  builder.sh  main.cpp  testRunner.cpp
Include/: Category.cppm  Category.hpp  Transaction.cppm  Transaction.hpp
Source/: Category.cpp  Transaction.cpp
